--- a/packages/brownie/templates/containers/nx/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/nx/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 services:
   {{ name }}:
     {% filter indent(4, true) %}
-      {% set image = 'cenk1cenk2/lerna-dev:14' %}
+      {% set image = 'cenk1cenk2/node-fnm:latest' %}
       {% include '../../base/image.yml.j2' %}
     {% endfilter %}
 
