feat: update new version
BREAKING CHANGE: updates nestjs to 8 and some breaking changes due to playground

--- a/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
@@ -39,6 +39,8 @@ database:
 
 {% if microservice is defined or enum.components.MICROSERVICE_CLIENT in components %}
 messageQueue:
-  urls: MESSAGE_QUEUE_URLS
+  urls:
+    __name: MESSAGE_QUEUE_URLS
+    __format: json
 {% endif %}
 
