fix: update for v8, solve some little bugs

--- a/packages/brownie/templates/containers/db-mysql/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/db-mysql/docker-compose.yml.j2
@@ -14,3 +14,6 @@ services:
     {% filter indent(4, true) %}
       {% include '../../base/volumes.yml.j2' %}
     {% endfilter %}
+
+    cap_add:
+      - sys_nice
