--- a/packages/nx-nest/src/schematics/application/files/package.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/package.json.j2
@@ -6,18 +6,7 @@
   "license": "ISC",
   "repository": "<<---REPOSITORYHERE--->>",
   "scripts": {
-    "start": "node ./src/main.js"
-    {% if enum.components.COMMAND in components %}
-    ,
-    "command": "CLI_PATH=./src/main.js NODE_SERVICE=cli nestjs-command",
-    "dev:command": "CLI_PATH=./src/main.ts NODE_SERVICE=cli ../../node_modules/.bin/nestjs-command"
-    {% endif %}
-    {% if enum.tests.JEST == tests %}
-    ,
-    "test": "jest --config ./test/jest.config.js --passWithNoTests",
-    "test:watch": "jest --config ./test/jest.config.js --watch --passWithNoTests",
-    "test:cov": "jest --config ./test/jest.config.js --coverage"
-    {% endif %}
+    "start": "node ./{{ root }}/src/main.js"
   },
   "engines": {
     "node": ">=12"
