feat: adds backend-interfaces library properly

--- a/packages/nx-nest/src/schematics/backend-interfaces/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/backend-interfaces/files/README.md.j2
@@ -8,7 +8,7 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ## Description
 
-This is a auto-generated custom library for microservice clients for [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
+This is a auto-generated custom library for shared backend components for [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
 
 <!-- toc -->
 <!-- tocstop -->
