--- a/packages/nx-nest/src/schematics/backend-interfaces/files/src/database/mock-orm.config__typeorm__.ts.j2
+++ b/packages/nx-nest/src/schematics/backend-interfaces/files/src/database/mock-orm.config__typeorm__.ts.j2
@@ -1,4 +1,4 @@
-import { getDatabaseOptions } from './database'
+import { getDatabaseOptions } from './database-typeorm'
 
 // eslint-disable-next-line @typescript-eslint/ban-ts-comment
 // @ts-ignore have to be written in that way for the type-orm migrations
