--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -32,7 +32,7 @@ cacheLifetime:
 {% if database is defined and database != enum.database.NONE %}
 database:
   database: db
-{% if enum.dbAdapters.TYPEORM in database %}
+{% if enum.dbAdapters.TYPEORM == dbAdapters %}
 {% if  database == enum.database.TYPEORM_MYSQL %}
   host: db-mysql
   type: mysql
@@ -50,10 +50,16 @@ database:
   mock:
     database: db_mock
   directories:
+{% if enum.extensions.EXTERNAL_BACKEND_INTERFACES in extensions %}
+    entity: ../../libs/{{ constants.BACKEND_INTERFACES_PACKAGE }}/src/entity-typeorm/**/*.entity{.ts,.js}
+    migration: migrations
+    seed: seeds
+{% else %}
     entity: ./**/*.entity{.ts,.js}
     migration: migrations
     seed: seeds
-{% elif enum.dbAdapters.MONGOOSE in database %}
+{% endif %}
+{% elif enum.dbAdapters.MONGOOSE == dbAdapters %}
   host: db-mongodb
   username: user
   password: secret
