--- a/packages/nx-nest/src/schematics/application/files/src/task/modules/migration__typeorm__/migration.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/task/modules/migration__typeorm__/migration.module.ts.j2
@@ -1,7 +1,11 @@
 import { Module } from '@nestjs/common'
 import { TypeOrmModule } from '@nestjs/typeorm'
 
+{% if enum.extensions.EXTERNAL_BACKEND_INTERFACES in extensions %}
+import { getDatabaseOptions } from '@{{ packageScope }}/{{ constants.BACKEND_INTERFACES_PACKAGE }}/database/database-typeorm'
+{% else %}
 import { getDatabaseOptions } from '../util/database'
+{% endif %}
 import { MigrationTask } from './migration.task'
 
 @Module({
