feat: add schematic generator and finalize it

--- a/packages/nx-nest/src/schematics/application/files/tsconfig.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/tsconfig.json.j2
@@ -2,5 +2,5 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
   },
-  "exclude": ["node_modules", "**/*.spec.ts", "tests"]
+  "exclude": ["node_modules", "**/*.spec.ts", "test"]
 }
