--- a/packages/nx-nest/src/schematics/generator/files/typeorm-entity-with-primary/__default__.entity.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/typeorm-entity-with-primary/__default__.entity.ts.j2
@@ -2,8 +2,8 @@ import { Column, Entity } from 'typeorm'
 
 import { BaseEntityWithPrimary } from './util'
 
-@Entity('DefaultTypeormEntity')
-export class DefaultTypeormEntity extends BaseEntityWithPrimary<DefaultTypeormEntity> {
+@Entity('{{ casing.pascal }}Entity')
+export class {{ casing.pascal }}Entity extends BaseEntityWithPrimary<{{ casing.pascal }}Entity> {
   @Column('varchar', { length: 120 })
   dummy: string
 }
