--- a/packages/nx-nest/src/schematics/generator/files/mongoose-entity/__default__.entity.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/mongoose-entity/__default__.entity.ts.j2
@@ -8,4 +8,4 @@ export class {{ casing.pascal }}Entity extends BaseDocument {
   dummy: string
 }
 
-export const {{ casing.pascal }}Schema = SchemaFactory.createForClass(DefaultMongooseEntity)
+export const {{ casing.pascal }}Schema = SchemaFactory.createForClass({{ casing.pascal }}Entity)
