fix: fix typeorm migration stuff, update versions

--- a/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
@@ -4,7 +4,6 @@ import { APP_FILTER,{% if server == enum.server.RESTFUL %} APP_INTERCEPTOR,{% en
 import { GraphQLModule } from '@nestjs/graphql'
 import { join } from 'path'
 import { graphQLContextParser, graphQLErrorParser } from './graphql-setup'
-import { ApolloServerPluginLandingPageGraphQLPlayground } from 'apollo-server-core'
 {% endif %}
 {% if database is defined and enum.dbAdapters.TYPEORM in database %}
 import { TypeOrmModule } from '@nestjs/typeorm'
@@ -82,7 +81,7 @@ export function createServerModule ({% if database is defined and database != en
         useGlobalPrefix: true,
         introspection: true,
         path: '/',
-        plugins: [ ApolloServerPluginLandingPageGraphQLPlayground ]
+        playground: true
       }),
       ...Object.values(resolvers),{% endif %}
       {% if server == enum.server.RESTFUL %}
