feat: add support for microservice definition via function, fix nestjs-command update

--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
@@ -6,8 +6,5 @@ import { MicroserviceProviderBaseMessage, BaseMessageIndexes } from '@webundsoeh
  * Request-response patterns for all message patterns of "{{ name }}" with pattern "{{ names.pattern }}"
  */
 export declare class {{ names.interface }} extends BaseMessageIndexes implements MicroserviceProviderBaseMessage<{{ names.pattern }}> {
-  [{{ names.pattern }}.{{ names.default }}]: {
-    request: any
-    response: any
-  }
+  [{{ names.pattern }}.{{ names.default }}]: (request: any) => any
 }
