--- a/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
@@ -14,8 +14,7 @@ export class {{ casing.pascal }}Command {
 
   @Command({
     command: 'hello <name>',
-    describe: 'Prints hello <name>',
-    autoExit: true
+    describe: 'Prints hello <name>'
   })
   async helloWorld (
     @Positional({
