WIP: start converting the structure to projects

--- a/packages/nx-nest/src/schematics/generator/files/mongoose-entity-timestamps/__default__.entity.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/mongoose-entity-timestamps/__default__.entity.ts.j2
@@ -1,11 +1,9 @@
-import { Prop, Schema, SchemaFactory } from '@nestjs/mongoose'
+import { Schema, SchemaFactory } from '@nestjs/mongoose'
 
 import { BaseDocumentWithTimestamps } from './util'
 
 @Schema({ timestamps: true })
 export class {{ casing.pascal }}Entity extends BaseDocumentWithTimestamps {
-  @Prop()
-  dummy: string
 }
 
 export const {{ casing.pascal }}Schema = SchemaFactory.createForClass({{ casing.pascal }}Entity)
