--- a/packages/nx-nest/src/schematics/generator/files/mongoose-entity/__default__.entity.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/mongoose-entity/__default__.entity.ts.j2
@@ -1,11 +1,9 @@
-import { Prop, Schema, SchemaFactory } from '@nestjs/mongoose'
+import { Schema, SchemaFactory } from '@nestjs/mongoose'
 
 import { BaseDocument } from './util'
 
 @Schema()
 export class {{ casing.pascal }}Entity extends BaseDocument {
-  @Prop()
-  dummy: string
 }
 
 export const {{ casing.pascal }}Schema = SchemaFactory.createForClass({{ casing.pascal }}Entity)
