--- a/packages/nx-nest/src/schematics/generator/files/typeorm-entity/__default__.entity.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/typeorm-entity/__default__.entity.ts.j2
@@ -1,9 +1,7 @@
-import { Column, Entity } from 'typeorm'
+import { Entity } from 'typeorm'
 
 import { BaseEntity } from './util'
 
 @Entity('{{ casing.pascal }}Entity')
 export class {{ casing.pascal }}Entity extends BaseEntity<{{ casing.pascal }}Entity> {
-  @Column('varchar', { length: 120 })
-  dummy: string
 }
