fix: templating issues

--- a/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
@@ -1,38 +1,1 @@
-{
-  "root": true,
-  "plugins": ["@nrwl/nx"],
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
-  "extends": ["@webundsoehne/eslint-config/index", "@webundsoehne/eslint-config/typescript"],
-  "rules": {
-    "import/order": [
-      "error",
-      {
-        "pathGroups": [{
-          "pattern": "@{{packageScope}}/**",
-          "group": "index"
-        },
-        {
-          "pattern": "@webundsoehne/**",
-          "group": "index"
-        },
-        {
-          "pattern": "@webundsoehne-private/**",
-          "group": "index"
-        }],
-        "pathGroupsExcludedImportTypes": ["builtin"],
-        "groups": [
-          ["builtin", "external"],
-          ["index", "parent", "sibling"]
-        ],
-        "newlines-between": "always",
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        }
-      }
-    ]
-  },
-  "overrides": []
-}
+{{ eslintConfig | dump(2) }}
