--- a/packages/nx-workspace/src/schematics/workspace/files/README.md.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/README.md.j2
@@ -171,7 +171,7 @@ CLIs are accesible by NX. Arguments can be passed through `--args`.
 
 ```bash
 # to run a cli
-./cli npm run nx -- command ${PACKAGE} --args "hello user"
+./cli npm run backend:command:one -- ${PACKAGE} --args "hello user"
 ```
 
 ---
