--- a/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
@@ -1,27 +1,14 @@
-import { Injectable, Logger } from '@nestjs/common'
-import { Command, Positional } from 'nestjs-command'
+import { Logger } from '@nestjs/common'
+import { Command, CommandRunner, Option } from 'nest-commander'
 
-/**
- * Register your Commands here! (both sync and async functions are fine)
- * All possible settings: https://www.npmjs.com/package/nestjs-command
- */
-
-@Injectable()
+@Command({ name: '{{ casing.kebab }}', description: 'Command to {{ casing.pascal }}.' })
 export class {{ casing.pascal }}Command {
   private logger: Logger = new Logger(this.constructor.name)
 
-  constructor () {}
-
-  @Command({
-    command: 'hello <name>',
-    describe: 'Prints hello <name>'
-  })
-  async helloWorld (
-    @Positional({
-      name: 'name'
-    })
-      name: string
+  public async run(
+    parameters: string[],
+    options?: Record<string, any>,
   ): Promise<void> {
-    this.logger.log(`Hello ${name}`)
+      return
   }
 }
