perf: cleans up old angular stuff auto injects to rules, adds more generators
BREAKING CHANGE: this definitely includes many breaking changes while cleaning up old nx rules to
have directly inject the three and context

--- a/packages/nx-nest/src/schematics/application/files/package.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/package.json.j2
@@ -4,12 +4,12 @@
   "description": "Tailored NestJS NX Based Application Skeleton",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
-  "repository": "<<---REPOSITORYHERE--->>",
+  "repository": "https://gitlab.tailored-apps.com/",
   "scripts": {
     "start": "node ./{{ root }}/src/main.js"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=16"
   },
   "implicitDependencies": {
     "rxjs": true,
