fix: minor templating issues

--- a/packages/nx-nest/src/schematics/backend-interfaces/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/backend-interfaces/files/README.md.j2
@@ -4,20 +4,16 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ---
 
-# @{{ packageScope}}/{{ packageName }}
+# {{ packageName }}
 
 ## Description
 
-This is a auto-generated custom library for shared backend components for [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
+This is a auto-generated library for shared backend components for [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
 
 <!-- toc -->
 <!-- tocstop -->
 
 ---
-
-# Usage
-
-Please refer to microservice-client section of [@webundsoehne/nestjs-util](https://www.npmjs.com/package/@webundsoehne/nestjs-util#microservice-client-provider).
 
 ---
 
