--- a/packages/nx-nest/src/schematics/microservice-provider/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/README.md.j2
@@ -4,7 +4,7 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ---
 
-# @{{ packageScope}}/{{ packageName }}
+# {{ packageName }}
 
 ## Description
 
