fix: add mechanism to remove implicit dependencies after remove

--- a/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
@@ -9,7 +9,7 @@ export class {{ casing.pascal }}Command implements CommandRunner {
     parameters: string[],
     options?: Record<string, any>,
   ): Promise<void> {
-    this.logger.info('Running the default command.')
+    this.logger.log('Running the default command.')
 
     return
   }
